Add The Danish Agency for Climate Data s a supporter

--- a/sources/sections/00-preface.adoc
+++ b/sources/sections/00-preface.adoc
@@ -59,7 +59,7 @@ The following OGC Members support the ModSpec Version 1.1 submission
 - Heazeltech
 - ImageMatters/Tema
 - UK Met Office
-
+- The Danish Agency for Climate Data
 
 [.preface]
 == Revision history
