--- a/sources/sections/05-conventions.adoc
+++ b/sources/sections/05-conventions.adoc
@@ -37,14 +37,10 @@ The same convention is used for permissions (per) and recommendations (rec).
 
 In this document the following abbreviations and acronyms are used or introduced:
 
-ERA:: Entity, Relation, Attribute (pre-object modeling technique)
 ISO:: International Organization for Standardization (from Greek for "same")
 OGC:: Open Geospatial Consortium (http://www.opengeospatial.org/)
-SQL:: ISO/IEC 9075 query language for relational databases, not originally an acronym, but now often cited as "Structured Query Language"
-TC:: Technical Committee (usually either in ISO or OGC)
-UML:: Unified Modeling Language (an object modeling language)
-XML:: eXtensible Markup Language
-OMG:: Object Management Group (http://www.omg.org/)
+SQL:: ISO/IEC 9075 query language for relational databases
+TC:: OGC Technical Committee
 
 [[cls-6-3]]
 === Finding requirements and recommendations
