--- a/sources/requirements/core/REQ14_all-classes-explicitly-named.adoc
+++ b/sources/requirements/core/REQ14_all-classes-explicitly-named.adoc
@@ -5,5 +5,6 @@
 ====
 [%metadata]
 identifier:: /req/core/all-classes-explicitly-named
-part:: For the sake of consistency and readability, all requirements classes and all conformance test classes _SHALL_ be explicitly named, with corresponding requirements classes and conformance test classes having similar names.
+part:: For the sake of consistency and readability, all requirements classes and all conformance test classes _SHALL_ 
+be explicitly named, with corresponding requirements classes and conformance test classes having similar names.
 ====
