--- a/sources/sections/00-foreword.adoc
+++ b/sources/sections/00-foreword.adoc
@@ -1,5 +1,5 @@
-[.preface]
-== Foreword
+[.abstract]
+== Abstract
 
 The OGC ModSpec - A Standard for Designing and Writing Modular Standards specifies a formal structure and requirements for writing modular standards documents. 
 However, the ModSpec does not supply specific content. Where possible, this document is conformant with itself (with respect to the core requirements class and 
