--- a/sources/document.adoc
+++ b/sources/document.adoc
@@ -6,7 +6,7 @@
 :docnumber: 08-131r5
 :edition: 1.1.0
 :received-date: 2025-08-22
-:issued-date: 2025-xx-xx
+:issued-date: 2025-10-xx
 :published-date: 2025-xx-xx
 :copyright-year: 2025
 :fullname: Carl Reed, PhD
@@ -16,7 +16,6 @@
 :fullname_3: John Herring, PhD
 :role_3: editor
 :language: en
-:submitting-organizations: Carl Reed, Charles Heazel, ImageMatters
 :imagesdir: images
 :mn-document-class: ogc
 :mn-output-extensions: xml,html,doc,pdf,rxl
