--- a/sources/document.adoc
+++ b/sources/document.adoc
@@ -18,7 +18,7 @@
 :language: en
 :imagesdir: images
 :mn-document-class: ogc
-:mn-output-extensions: xml,html,doc,pdf,rxl
+:mn-output-extensions: xml,html,doc,pdf
 :local-cache-only:
 :data-uri-image:
 
