--- a/sources/24-065-part2-uml/document.adoc
+++ b/sources/24-065-part2-uml/document.adoc
@@ -6,7 +6,7 @@
 :docnumber: 24-065
 :edition: 1.1.0
 :received-date: 2025-03-15
-:issued-date: 2025-xx-xx
+:issued-date: 2025-07-xx
 :published-date: 2025-xx-xx
 :copyright-year: 2025
 :fullname: Carl Reed
@@ -14,10 +14,10 @@
 :fullname_2: John Herring
 :role_2: editor
 :language: en
-:submitting-organizations: Carl Reed, Heazeltech, ImageMatters
+:submitting-organizations: Carl Reed & Associates, Heazeltech, Tepa Enterprise Solutions (ImageMatters)
 :imagesdir: images
 :mn-document-class: ogc
-:mn-output-extensions: xml,html,doc,pdf,rxl
+:mn-output-extensions: xml,html,doc,pdf
 :local-cache-only:
 :data-uri-image:
 
