--- a/sources/24-066-part3-xml/document.adoc
+++ b/sources/24-066-part3-xml/document.adoc
@@ -14,10 +14,10 @@
 :fullname_2: John Herring
 :role_2: editor
 :language: en
-:submitting-organizations: Carl Reed, Heazeltech, ImageMatters
+:submitting-organizations: Carl Reed & Associates, Heazeltech, Tepa Enterprise Solutions (ImageMatters)
 :imagesdir: images
 :mn-document-class: ogc
-:mn-output-extensions: xml,html,doc,pdf,rxl
+:mn-output-extensions: xml,html,doc,pdf
 :local-cache-only:
 :data-uri-image:
 
