--- a/sources/requirements/core/REQ028_reqs-are-in-class.adoc
+++ b/sources/requirements/core/REQ028_reqs-are-in-class.adoc
@@ -2,8 +2,10 @@
 [[req-28]]
 
 [requirement]
+[.requirement,identifier="/req/core/reqs-are-in-class",model=ogc,number=28]
 ====
+
 [%metadata]
-[requirement,identifier="/req/core/reqs-are-in-class",model=ogc,number=28]
+
 part:: Each requirement in the standard _SHALL_ be associated with exactly one requirements class.
 ====
