--- a/sources/24-066-part3-xml/document.adoc
+++ b/sources/24-066-part3-xml/document.adoc
@@ -3,7 +3,7 @@
 :docsubtype: logical-model
 :status: Draft
 :committee: technical
-:docnumber: 24-066
+:docnumber: 24-066r1
 :edition: 1.1.0
 :received-date: 2025-05-25
 :issued-date: xxxx-xx-xx
